packages/admin/public/app.css
/* ... */
.form-input:focus, .form-textarea:focus, .form-select:focus, .form-multiselect:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
  --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
  --tw-ring-offset-width: 0px;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: #2563eb;
  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
  border-color: #2563eb;
}
.form-input::-moz-placeholder, .form-textarea::-moz-placeholder {
  color: #6b7280;
  opacity: 1;
}
.form-input::placeholder,.form-textarea::placeholder {
  color: #6b7280;
  opacity: 1;
}
.form-input::-webkit-datetime-edit-fields-wrapper {
  padding: 0;
}
.form-input::-webkit-date-and-time-value {
  min-height: 1.5em;
}
.form-input::-webkit-datetime-edit,.form-input::-webkit-datetime-edit-year-field,.form-input::-webkit-datetime-edit-month-field,.form-input::-webkit-datetime-edit-day-field,.form-input::-webkit-datetime-edit-hour-field,.form-input::-webkit-datetime-edit-minute-field,.form-input::-webkit-datetime-edit-second-field,.form-input::-webkit-datetime-edit-millisecond-field,.form-input::-webkit-datetime-edit-meridiem-field {
  padding-top: 0;
  padding-bottom: 0;
}
.form-select {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
  background-position: right 0.5rem center;
  background-repeat: no-repeat;
  background-size: 1.5em 1.5em;
  padding-right: 2.5rem;
  -webkit-print-color-adjust: exact;
          color-adjust: exact;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}
.pointer-events-none {
  pointer-events: none;
}
.pointer-events-auto {
  pointer-events: auto;
}
.visible {
  visibility: visible;
}
.fixed {
  position: fixed;
}
.absolute {
  position: absolute;
}
.relative {
  position: relative;
}
.sticky {
  position: -webkit-sticky;
  position: sticky;
}
.inset-0 {
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
}
.inset-x-0 {
  left: 0px;
  right: 0px;
}
.inset-y-0 {
  top: 0px;
  bottom: 0px;
}
.left-0 {
  left: 0px;
}
.right-0 {
  right: 0px;
}
.top-0 {
  top: 0px;
}
.bottom-0 {
  bottom: 0px;
}
.left-10 {
  left: 2.5rem;
}
.left-full {
  left: 100%;
}
.top-\[2px\] {
  top: 2px;
}
.-left-\[calc\(0\.5rem_-_1px\)\] {
  left: calc(calc(0.5rem - 1px) * -1);
}
.top-8 {
  top: 2rem;
}
.top-5 {
  top: 1.25rem;
}
.left-5 {
  left: 1.25rem;
}
.-bottom-0\.5 {
  bottom: -0.125rem;
}
.-right-1 {
  right: -0.25rem;
}
.-bottom-0 {
  bottom: -0px;
}
.top-full {
  top: 100%;
}
.right-4 {
  right: 1rem;
}
.-right-\[13px\] {
  right: -13px;
}
.bottom-8 {
  bottom: 2rem;
}
.top-2 {
  top: 0.5rem;
}
.right-2 {
  right: 0.5rem;
}
.bottom-12 {
  bottom: 3rem;
}
.-top-1 {
  top: -0.25rem;
}
.top-3 {
  top: 0.75rem;
}
.left-2 {
  left: 0.5rem;
}
.z-50 {
  z-index: 50;
}
.z-75 {
  z-index: 75;
}
.z-20 {
  z-index: 20;
}
.z-40 {
  z-index: 40;
}
.z-10 {
  z-index: 10;
}
.z-0 {
  z-index: 0;
}
.order-3 {
  order: 3;
}
.order-2 {
  order: 2;
}
.col-span-2 {
  grid-column: span 2 / span 2;
}
.col-span-7 {
  grid-column: span 7 / span 7;
}
.col-span-3 {
  grid-column: span 3 / span 3;
}
.col-span-12 {
  grid-column: span 12 / span 12;
}
.col-span-9 {
  grid-column: span 9 / span 9;
}
.col-span-11 {
  grid-column: span 11 / span 11;
}
.col-span-1 {
  grid-column: span 1 / span 1;
}
.col-span-6 {
  grid-column: span 6 / span 6;
}
.col-span-5 {
  grid-column: span 5 / span 5;
}
.mx-auto {
  margin-left: auto;
  margin-right: auto;
}
.-my-4 {
  margin-top: -1rem;
  margin-bottom: -1rem;
}
.mx-1 {
  margin-left: 0.25rem;
  margin-right: 0.25rem;
}
.my-1 {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
}
.my-2 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}
.-my-8 {
  margin-top: -2rem;
  margin-bottom: -2rem;
}
.my-6 {
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
}
.mx-4 {
  margin-left: 1rem;
  margin-right: 1rem;
}
.mt-12 {
  margin-top: 3rem;
}
.mt-6 {
  margin-top: 1.5rem;
}
.ml-3 {
  margin-left: 0.75rem;
}
.ml-2 {
  margin-left: 0.5rem;
}
.-mr-1 {
  margin-right: -0.25rem;
}
.mt-2 {
  margin-top: 0.5rem;
}
.mt-1 {
  margin-top: 0.25rem;
}
.ml-4 {
  margin-left: 1rem;
}
.-mt-10 {
  margin-top: -2.5rem;
}
.-ml-10 {
  margin-left: -2.5rem;
}
.-mt-7 {
  margin-top: -1.75rem;
}
.mb-6 {
  margin-bottom: 1.5rem;
}
.mt-0\.5 {
  margin-top: 0.125rem;
}
.mt-0 {
  margin-top: 0px;
}
.mt-4 {
  margin-top: 1rem;
}
.mr-3 {
  margin-right: 0.75rem;
}
.mr-2 {
  margin-right: 0.5rem;
}
.-mb-8 {
  margin-bottom: -2rem;
}
.-ml-px {
  margin-left: -1px;
}
.-ml-1 {
  margin-left: -0.25rem;
}
.mr-4 {
  margin-right: 1rem;
}
.-mt-2 {
  margin-top: -0.5rem;
}
.mt-8 {
  margin-top: 2rem;
}
.ml-1 {
  margin-left: 0.25rem;
}
.ml-5 {
  margin-left: 1.25rem;
}
.ml-8 {
  margin-left: 2rem;
}
.ml-2\.5 {
  margin-left: 0.625rem;
}
.-mt-24 {
  margin-top: -6rem;
}
.ml-7 {
  margin-left: 1.75rem;
}
.mr-1 {
  margin-right: 0.25rem;
}
.mb-4 {
  margin-bottom: 1rem;
}
.block {
  display: block;
}
.inline-block {
  display: inline-block;
}
.inline {
  display: inline;
}
.flex {
  display: flex;
}
.inline-flex {
  display: inline-flex;
}
.table {
  display: table;
}
.flow-root {
  display: flow-root;
}
.grid {
  display: grid;
}
.hidden {
  display: none;
}
.aspect-\[16\/9\] {
  aspect-ratio: 16/9;
}
.h-screen {
  height: 100vh;
}
.h-5 {
  height: 1.25rem;
}
.h-6 {
  height: 1.5rem;
}
.h-full {
  height: 100%;
}
.h-7 {
  height: 1.75rem;
}
.h-4 {
  height: 1rem;
}
.h-8 {
  height: 2rem;
}
.h-96 {
  height: 24rem;
}
.h-3 {
  height: 0.75rem;
}
.h-16 {
  height: 4rem;
}
/* ... */

